--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,5 +1,12 @@
 #section-1 {
   text-align: center;
+  background: #000;
+  color: #fff;
+}
+
+#section-1 button {
+  background: #fff;
+  color: #000;
 }
 
 #section-2 {
@@ -8,7 +15,12 @@
 
 #section-2 img {
   min-width: 250px;
-  max-width: 18vw;
+  max-width: 25vw;
+}
+
+#section-3 {
+  background: #000;
+  color: #fff;
 }
 
 #section-4 {
@@ -16,9 +28,20 @@
 }
 
 #section-4 .grid-default {
-  background: var(--main-overlay);
+  background: #000;
   border-radius: 15px;
   overflow: hidden;
+}
+
+#section-4 form *,
+#section-4 *::placeholder {
+  color: #fff;
+}
+
+#section-4 button {
+  margin-top: 20px;
+  background: #fff;
+  color: #000;
 }
 
 .mock {
@@ -45,7 +68,7 @@
 .package-items {
   display: grid;
   gap: 20px;
-  background: var(--main-white);
+  background: #fff;
   box-shadow: var(--box-shadow1);
   padding: 50px 20px 20px;
   border-radius: 12px;
