--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,27 +1,27 @@
 :root {
-  --main-color: #fff;
-  --sub-color: #f3f3f3;
-  --font-color: #2f2f2f;
-  --box-shadow1: rgba(0, 0, 0, 0.5) 0px 3px 15px;
+  --main-white: #fff;
+  --main-overlay: #f2f5fd;
+  --font-color: #333;
+  --font-color2: #535768;
+  --main-color: #6161ff;
+  --box-shadow1: rgba(97, 97, 255, 0.5) 0px 3px 15px;
 }
 
 * {
   box-sizing: border-box;
-  letter-spacing: 0.3px;
 }
 
 body {
-  overflow-x: hidden;
   margin: 0;
   padding: 0;
   color: var(--font-color);
   font-size: 16px;
   font-weight: 400;
-  font-family: "Roboto", sans-serif;
+  font-family: Poppins;
 }
 
 body::-webkit-scrollbar,
-main::-webkit-scrollbar {
+section::-webkit-scrollbar {
   opacity: 0;
   width: 0;
 }
@@ -31,8 +31,7 @@ main::-webkit-scrollbar {
 }
 
 main {
-  position: relative;
-  overflow: hidden;
+  background: var(--main-overlay);
 }
 
 img {
@@ -42,10 +41,9 @@ img {
 }
 
 h1 {
-  font-size: clamp(22px, 4vw, 50px);
-  font-weight: 600;
+  font-size: clamp(24px, 4vw, 60px);
+  font-weight: 200;
   line-height: 1.5;
-  text-transform: uppercase;
   margin: 0;
 }
 
@@ -90,11 +88,11 @@ button {
   min-width: 120px;
   height: fit-content;
   border: none;
-  border-radius: 30px;
-  padding: 14px 30px;
+  border-radius: 8px;
+  padding: 15px 20px 12px;
   margin: auto;
   font-size: clamp(14px, 1vw, 16px);
-  background: #000;
+  background: var(--main-color);
   color: #fff;
   cursor: pointer;
   transition: 0.5s;
@@ -104,20 +102,25 @@ button:hover {
   opacity: 0.8;
 }
 
+section {
+  position: relative;
+  overflow: hidden;
+}
+
 caption {
   display: block;
   text-transform: uppercase;
   text-align: left;
   font-size: clamp(26px, 2vw, 32px);
   font-weight: 700;
-  color: var(--font-color);
+  color: var(--font1);
   margin-bottom: 20px;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  padding: clamp(20px, 4vw, 70px);
+  padding: clamp(20px, 4vw, 50px);
   background: transparent;
 }
 
@@ -126,6 +129,7 @@ form #input {
   grid-template-columns: repeat(2, 1fr);
   gap: clamp(20px, 4vw, 50px);
 }
+
 form > *:first-child {
   margin-bottom: 20px;
 }
@@ -142,7 +146,8 @@ textarea {
 }
 
 textarea {
-  height: clamp(60px, 8vw, 120px);
+  height: 8vw;
+  min-height: 75px;
   background: transparent;
 }
 
@@ -170,8 +175,8 @@ textarea::placeholder {
 
 .grid-default {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-  margin: clamp(50px, 7vw, 80px) auto;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  margin: clamp(50px, 10vw, 80px) auto;
 }
 
 .grid-image {
@@ -183,10 +188,69 @@ textarea::placeholder {
   text-align: center;
 }
 
+.package-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  width: 100%;
+  margin: clamp(50px, 10vw, 50px) auto;
+}
+
+.package-items {
+  display: grid;
+  gap: 20px;
+  background: var(--main-white);
+  box-shadow: var(--box-shadow1);
+  padding: 50px 20px 20px;
+  border-radius: 12px;
+  text-align: center;
+}
+
+.package-title {
+  color: var(--font-color2);
+  font-size: 22px;
+  font-weight: 400;
+}
+
+.package-price {
+  position: relative;
+  color: var(--main-color);
+  font-size: 44px;
+  font-weight: 600;
+}
+
+.package-price:after {
+  content: "Per/Month";
+  display: block;
+  color: var(--font-color2);
+  font-size: 22px;
+  font-weight: 400;
+  border-bottom: 1px solid var(--main-color);
+  padding-bottom: 20px;
+}
+
+.package-price-sub {
+  position: relative;
+}
+
+.package-details {
+  color: var(--font-color2);
+}
+
+button.package-button {
+  margin: 20px auto;
+  width: 85%;
+}
+
 @media screen and (max-width: 992px) {
   ._container {
-    width: 90vw;
+    display: grid;
+    gap: 20px;
+    padding: clamp(50px, 7vw, 120px) 0;
+    width: 95vw;
     min-width: auto;
+    min-height: 35vw;
+    margin: 0;
   }
 
   .grid-default {
