--- a/src/css/app.css
+++ b/src/css/app.css
@@ -17,7 +17,7 @@ body {
   color: var(--font-color);
   font-size: 16px;
   font-weight: 400;
-  font-family: Poppins;
+  font-family: "Poppins", sans-serif;
 }
 
 body::-webkit-scrollbar,
@@ -263,14 +263,13 @@ button.package-button {
 }
 
 @media screen and (max-width: 992px) {
+  body {
+    overflow-x: hidden;
+  }
+
   ._container {
-    display: grid;
-    gap: 20px;
-    padding: clamp(50px, 7vw, 120px) 0;
-    width: 95vw;
-    min-width: auto;
-    min-height: 35vw;
-    margin: 0;
+    width: 100%;
+    padding: 50px 20px;
   }
 
   .grid-default {
