--- a/src/css/app.css
+++ b/src/css/app.css
@@ -26,14 +26,6 @@ section::-webkit-scrollbar {
   width: 0;
 }
 
-#app {
-  position: relative;
-}
-
-main {
-  background: var(--main-overlay);
-}
-
 img {
   width: 100%;
   height: 100%;
@@ -42,7 +34,7 @@ img {
 
 h1 {
   font-size: clamp(24px, 4vw, 60px);
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.5;
   margin: 0;
 }
@@ -85,11 +77,11 @@ a:hover {
 
 button {
   width: fit-content;
-  min-width: 120px;
+  min-width: 100px;
   height: fit-content;
   border: none;
   border-radius: 8px;
-  padding: 15px 20px 12px;
+  padding: 13px 30px;
   margin: auto;
   font-size: clamp(14px, 1vw, 16px);
   background: var(--main-color);
@@ -100,11 +92,6 @@ button {
 
 button:hover {
   opacity: 0.8;
-}
-
-section {
-  position: relative;
-  overflow: hidden;
 }
 
 caption {
@@ -188,88 +175,14 @@ textarea::placeholder {
   text-align: center;
 }
 
-.package-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-  width: 100%;
-  margin: clamp(50px, 10vw, 50px) auto;
-}
-
-.package-items {
-  display: grid;
-  gap: 20px;
-  background: var(--main-white);
-  box-shadow: var(--box-shadow1);
-  padding: 50px 20px 20px;
-  border-radius: 12px;
-  text-align: center;
-}
-
-.package-title {
-  color: var(--font-color2);
-  font-size: 22px;
-  font-weight: 400;
-}
-
-.package-price {
-  position: relative;
-  color: var(--main-color);
-  font-size: 44px;
-  font-weight: 600;
-}
-
-.package-price:after {
-  content: "Per/Month";
-  display: block;
-  color: var(--font-color2);
-  font-size: 22px;
-  font-weight: 400;
-  border-bottom: 1px solid var(--main-color);
-  padding-bottom: 20px;
-}
-
-.package-price-sub {
-  position: relative;
-}
-
-.package-details {
-  color: var(--font-color2);
-}
-
-button.package-button {
-  margin: 20px auto;
-  width: 85%;
-}
-
-/*footer*/
-#Footer {
-  background: var(--main-overlay);
-}
-
-.footer-content {
-  grid-template-columns: repeat(4, 1fr);
-  text-align: left;
-}
-
-.footer-menu {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.footer-content a {
-  text-transform: unset;
-}
-
 @media screen and (max-width: 992px) {
   body {
     overflow-x: hidden;
   }
 
   ._container {
-    width: 100%;
-    padding: 50px 20px;
+    width: 90%;
+    min-width: auto;
   }
 
   .grid-default {
