--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,4 +1,5 @@
 #section-1 {
+  min-height: 35vw;
   text-align: center;
   background: var(--main-overlay);
   color: var(--font-color);
@@ -22,7 +23,7 @@
 }
 
 #section-4 .grid-default {
-  background: var(--main-white);
+  background: var(--main-overlay);
   border-radius: 15px;
   overflow: hidden;
 }
@@ -35,22 +36,15 @@
 .package-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 30px;
+  gap: 50px;
   width: 100%;
   margin: clamp(50px, 10vw, 50px) auto;
-}
-
-.package-border {
-  width: 100%;
-  height: 1px;
-  background: var(--font-color);
 }
 
 .package-items {
   display: grid;
   gap: 20px;
-  background: #fff;
-  color: var(--font-color);
+  background: var(--main-white);
   box-shadow: var(--box-shadow1);
   padding: 50px 20px 20px;
   border-radius: 12px;
@@ -58,25 +52,34 @@
 }
 
 .package-title {
+  color: var(--font-color2);
   font-size: 22px;
   font-weight: 400;
 }
 
 .package-price {
   position: relative;
+  color: var(--main-color);
   font-size: 44px;
   font-weight: 600;
 }
 
-.package-price::after {
+.package-price:after {
   content: "Per/Month";
   display: block;
+  color: var(--font-color2);
   font-size: 22px;
   font-weight: 400;
+  border-bottom: 1px solid var(--main-color);
+  padding-bottom: 20px;
 }
 
 .package-price-sub {
   position: relative;
+}
+
+.package-details {
+  color: var(--font-color2);
 }
 
 button.package-button {
