--- a/src/css/app.css
+++ b/src/css/app.css
@@ -18,7 +18,7 @@ body {
   color: var(--font-color);
   font-size: 16px;
   font-weight: 400;
-  font-family: "Poppins";
+  font-family: "Poppins", serif;
 }
 
 body::-webkit-scrollbar,
