--- a/src/css/app.css
+++ b/src/css/app.css
@@ -77,12 +77,13 @@ a:hover {
 
 button {
   display: grid;
+  place-items: center;
   width: fit-content;
-  min-width: 140px;
   height: fit-content;
+  min-width: 140px;
   border: none;
   border-radius: 8px;
-  padding: 13px 10px;
+  padding: 12px 20px;
   margin: auto;
   background: var(--main-color);
   color: #fff;
