--- a/src/smo-app/smo-style.css
+++ b/src/smo-app/smo-style.css
@@ -4,6 +4,10 @@
   }
 }
 
+#Smo-App {
+  max-height: 100%;
+}
+
 #Smo-App * {
   box-sizing: border-box;
 }
@@ -14,6 +18,7 @@
   font-size: 16px;
   font-weight: 600;
   letter-spacing: 0.5px;
+  min-width: 180px;
 }
 
 #Smo-App button.btn-register {
@@ -68,12 +73,13 @@
   flex-direction: column;
   justify-content: center;
   gap: 40px;
-  min-height: 100vh;
-  background-image: url("/src/smo-app/smo-assets/logo/login-screen.jpg");
+  height: 100vh;
+  width: 100%;
+  background-image: url("/src/smo-app/smo-assets/image/login-screen.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 30%;
-  width: 100%;
+
   padding: 0 15%;
 }
 
