--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,11 +1,12 @@
 :root {
   --main-bg: #fff;
-  --main-color: #6161ff;
-  --main-overlay: #f2f5fd;
-  --font-color: #333;
-  --font-color2: #535768;
-  --box-shadow1: rgba(97, 97, 255, 0.5) 0px 3px 15px;
-  --box-shadow2: rgba(204, 204, 204, 0.5) 0px 3px 15px;
+  --main-bg2: #f8f8f8;
+  --main-bg3: #708586;
+  --main-color1: #4bbed1;
+  --main-color2: #ffba00;
+  --font-color1: #000;
+  --font-color2: #708586;
+  --text-shadow1: 8px 8px 0 rgb(255, 186, 0, 0.8);
 }
 
 * {
@@ -15,10 +16,23 @@
 body {
   margin: 0;
   padding: 0;
-  color: var(--font-color);
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
-  font-family: "Poppins", serif;
+  font-family: "Oswald", sans-serif;
+  color: var(--font-color1);
+}
+
+main {
+  padding-bottom: clamp(30px, 10vw, 200px);
+}
+
+a {
+  color: var(--font-color2);
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 body::-webkit-scrollbar,
@@ -34,24 +48,27 @@ img {
 }
 
 h1 {
-  font-size: clamp(24px, 4vw, 60px);
-  font-weight: 400;
-  line-height: 1.5;
+  font-size: clamp(24px, 10vw, 100px);
+  font-weight: 800;
+  line-height: 1;
   margin: 0;
+  text-transform: uppercase;
 }
 
 h2 {
-  font-size: clamp(20px, 4vw, 24px);
-  font-weight: 400;
-  line-height: 1.2;
+  font-size: clamp(20px, 7vw, 70px);
+  font-weight: 600;
+  line-height: 1;
   margin: 0;
+  text-transform: uppercase;
 }
 
 h3 {
-  font-size: clamp(20px, 4vw, 20px);
-  font-weight: 400;
-  line-height: 1.2;
+  font-size: clamp(20px, 6vw, 60px);
+  font-weight: 800;
+  line-height: 1;
   margin: 0;
+  text-transform: uppercase;
 }
 
 p {
@@ -62,37 +79,28 @@ p {
 span {
   font-size: 14px;
   margin-top: 15px;
-}
-
-a {
-  text-decoration: none;
-  color: var(--font-color);
-  font-size: clamp(14px, 1.2vw, 16px);
-  font-weight: 400;
-}
-
-a:hover {
-  color: var(--main-color);
+  text-transform: uppercase;
 }
 
 button {
   display: grid;
   place-items: center;
   width: fit-content;
-  height: fit-content;
-  min-width: 140px;
+  min-width: 180px;
+  height: 60px;
+  padding: 0 30px;
   border: none;
-  border-radius: 8px;
-  padding: 12px 20px;
   margin: auto;
-  background: var(--main-color);
-  color: #fff;
   cursor: pointer;
+  text-transform: uppercase;
+  background: var(--main-color2);
+  color: #fff;
+  font-size: 18px;
   transition: 0.5s;
 }
 
 button:hover {
-  opacity: 0.8;
+  background: var(--main-color1);
 }
 
 button a {
@@ -103,26 +111,16 @@ button:hover a {
   color: #fff;
 }
 
-caption {
-  display: block;
-  text-transform: uppercase;
-  text-align: left;
-  font-size: clamp(26px, 2vw, 32px);
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-
 form {
   display: flex;
   flex-direction: column;
-  padding: clamp(20px, 4vw, 50px);
   background: transparent;
 }
 
-form #input {
+.input-group {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: clamp(20px, 4vw, 50px);
+  gap: 20px;
 }
 
 form > *:first-child {
@@ -158,30 +156,35 @@ textarea::placeholder {
   opacity: 0.8;
 }
 
-._container {
+.container {
   display: grid;
-  align-content: center;
-  gap: 20px;
-  width: 70vw;
+  place-items: center;
   min-width: 900px;
-  min-height: 30vw;
-  padding: clamp(50px, 10vw, 150px) 0;
+  min-height: 40vw;
+  width: 70vw;
   margin: auto;
+  padding: clamp(50px, 10vw, 100px) 0;
 }
 
 .grid-default {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  margin: clamp(50px, 10vw, 80px) auto;
+  gap: clamp(30px, 5vw, 50px);
+  margin: clamp(50px, 10vw, 100px) auto;
 }
 
 .grid-image {
-  display: grid;
-  place-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .center {
   text-align: center;
+}
+
+.bg-sand {
+  background-image: url("/src/assets/beach/bg-sand.png");
+  background-size: cover;
 }
 
 @media screen and (max-width: 992px) {
@@ -189,7 +192,7 @@ textarea::placeholder {
     overflow-x: hidden;
   }
 
-  ._container {
+  .container {
     width: 90%;
     min-width: auto;
   }
