--- a/src/css/app.css
+++ b/src/css/app.css
@@ -4,7 +4,7 @@
   --color1: #4bbed1;
   --color2: #ffba00;
   --color3: #708586;
-  --color4: #00516f;
+  --color4: #2a5360;
   --text-shadow1: 8px 8px 0 rgb(255, 186, 0, 0.7);
   --box-shadow1: #ddd 0px 3px 15px;
 }
