--- a/src/smo-app/smo-style.css
+++ b/src/smo-app/smo-style.css
@@ -18,7 +18,8 @@
   font-size: 16px;
   font-weight: 600;
   letter-spacing: 0.5px;
-  min-width: 180px;
+  min-width: 200px;
+  height: 50px;
 }
 
 #Smo-App button.btn-register {
