--- a/src/css/mod-slide.css
+++ b/src/css/mod-slide.css
@@ -6,7 +6,8 @@
   overflow: hidden;
   display: flex;
   gap: 10px;
-  min-height: 30vw;
+  height: 30vw;
+  min-height: 500px;
   width: 100%;
 }
 
