--- a/src/css/app.css
+++ b/src/css/app.css
@@ -204,6 +204,10 @@ textarea::placeholder {
 }
 
 @media screen and (max-width: 992px) {
+  #AppClient {
+    gap: 50px;
+  }
+
   body {
     overflow-x: hidden;
   }
@@ -221,4 +225,11 @@ textarea::placeholder {
 }
 
 @media screen and (max-width: 440px) {
+  #AppClient {
+    gap: 20px;
+  }
+
+  .title-section {
+    margin: 30px 0;
+  }
 }
