--- a/src/css/app.css
+++ b/src/css/app.css
@@ -14,12 +14,27 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  gap: var(--gap-content);
   min-height: 100vh;
   overflow-x: hidden;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: "Inter", sans-serif;
+  line-height: 1.5;
+  color: var(--color4);
+}
+
 header {
-  height: clamp(50px, 5vw, 70px);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 2;
+  height: 70px;
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -29,26 +44,15 @@ footer {
 
 * {
   box-sizing: border-box;
-  line-height: 1.5;
 }
 
-main {
+section {
   display: grid;
   place-items: center;
   min-width: 900px;
   min-height: 30vw;
   width: 70vw;
   margin: auto;
-  padding: var(--gap-content) 0;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-size: 18px;
-  font-weight: 400;
-  font-family: "Inter", sans-serif;
-  color: #000;
 }
 
 a {
@@ -57,6 +61,7 @@ a {
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 1px;
+  color: #fff;
 }
 
 a:hover {
@@ -78,12 +83,11 @@ img {
 h1 {
   font-size: clamp(50px, 6vw, 110px);
   font-weight: 900;
-  line-height: 1;
+  line-height: 1.3;
   margin: 0;
   text-transform: uppercase;
   color: var(--color1);
-  font-family: "Noto Serif", serif;
-  letter-spacing: 8px;
+  letter-spacing: 5px;
 }
 
 h2 {
@@ -104,15 +108,10 @@ h3 {
   color: var(--color1);
 }
 
-p {
-  line-height: 1.8;
-  margin: 0;
-  color: var(--color3);
-}
-
-span {
+sub {
   font-size: 14px;
   text-transform: uppercase;
+  color: var(--color4);
 }
 
 button {
@@ -120,7 +119,7 @@ button {
   place-items: center;
   width: fit-content;
   min-width: 180px;
-  height: 55px;
+  height: 50px;
   padding: 0 30px;
   border: none;
   margin: auto;
@@ -128,7 +127,6 @@ button {
   text-transform: uppercase;
   background: var(--color2);
   color: #fff;
-  font-size: 18px;
   transition: 0.5s;
 }
 
@@ -173,7 +171,7 @@ textarea {
 
 textarea {
   height: 8vw;
-  min-height: 75px;
+  min-height: 100px;
   background: transparent;
 }
 
@@ -189,29 +187,17 @@ textarea::placeholder {
   opacity: 0.8;
 }
 
-.grid-default {
+main {
   position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: clamp(30px, 6vw, 60px);
 }
 
-.grid-default > div {
+main > div {
   position: relative;
-  height: 100%;
-}
-
-.grid-image {
   width: 100%;
   height: 100%;
-}
-
-.title-section {
-  text-align: center;
-  margin: 30px 0;
-}
-
-.title-section h1 {
 }
 
 @media screen and (max-width: 1600px) {
@@ -228,7 +214,7 @@ textarea::placeholder {
   header {
     position: fixed;
     top: 0;
-    background: #fff;
+    height: fit-content;
   }
 
   body {
@@ -240,19 +226,16 @@ textarea::placeholder {
     padding: 0 20px;
     min-width: auto;
   }
+}
 
-  .grid-default {
-    display: grid;
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  section {
+    min-width: 100%;
+  }
+  main {
     gap: 30px;
   }
 }
 
 @media screen and (max-width: 440px) {
-  #AppClient {
-    gap: 20px;
-  }
-
-  .title-section {
-    margin: 30px 0;
-  }
 }
