--- a/src/css/app.css
+++ b/src/css/app.css
@@ -226,16 +226,19 @@ main > div {
     padding: 0 20px;
     min-width: auto;
   }
-}
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
   section {
     min-width: 100%;
   }
+
   main {
     gap: 30px;
   }
 }
 
 @media screen and (max-width: 440px) {
+  main {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
 }
