--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,58 +1,84 @@
 :root {
-  --bg: #fff;
-  --bg2: #fafafa;
-  --color1: #4bbed1;
-  --color2: #ffba00;
-  --color3: #708586;
-  --color4: #2a5360;
-  --text-shadow1: 8px 8px 0 rgb(255, 186, 0, 0.7);
-  --box-shadow1: #ddd 0px 3px 15px;
-  --gap-content: clamp(50px, 10vw, 200px);
+  --color: #0e0c2c;
+  --color1: #110e17;
+  --color2: #9e9e9e;
+  --color3: #5844b4;
+  --color4: #111036;
+  --gap-text: clamp(20px, 5vw, 50px);
+  --gap-content: clamp(50px, 100%, 100px);
+  --linear1: linear-gradient(to right, #13103b 0%, #0c0b25 30%, #0c0b25 70%, #13103b 100%);
+  --linear2: linear-gradient(to right, #5844b4 0%, #714feb 100%);
+  --linear3: linear-gradient(to bottom, #2e2b44 0%, #111036 100%);
+  --box-shadow1: #4c33a5 6px 6px 15px;
 }
 
 #AppClient {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: var(--gap-content);
-  min-height: 100vh;
-  overflow-x: hidden;
+  background: var(--linear1);
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-size: 18px;
-  font-weight: 400;
-  font-family: "Inter", sans-serif;
-  line-height: 1.5;
-  color: var(--color4);
-}
-
-header {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 2;
-  height: 70px;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-footer {
-  min-height: 300px;
+::-webkit-scrollbar {
+  display: none;
 }
 
 * {
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-size: clamp(14px, 1vw, 20px);
+  color: #fff;
+  font-weight: 400;
+  font-family: "Inter", sans-serif;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-content);
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
+  height: 100%;
+}
+
 section {
   display: grid;
+  align-items: center;
+  width: 100%;
+  min-height: 40vw;
+  position: relative;
+  scroll-snap-align: center;
+}
+
+.container {
+  display: grid;
+  place-content: center;
   place-items: center;
   min-width: 900px;
-  min-height: 30vw;
-  width: 70vw;
+  width: 60vw;
   margin: auto;
+  height: 100%;
+}
+
+header {
+  background: transparent;
+  z-index: 1;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  display: grid;
+  place-items: center;
+  background: var(--linear1);
+  width: 100%;
+  min-height: 60px;
+  z-index: 1;
 }
 
 a {
@@ -65,13 +91,7 @@ a {
 }
 
 a:hover {
-  color: var(--color2);
-}
-
-body::-webkit-scrollbar,
-section::-webkit-scrollbar {
-  opacity: 0;
-  width: 0;
+  color: #fff;
 }
 
 img {
@@ -81,71 +101,44 @@ img {
 }
 
 h1 {
-  font-size: clamp(50px, 6vw, 110px);
-  font-weight: 900;
-  line-height: 1.3;
+  font-size: clamp(24px, 4.5vw, 80px);
+  font-weight: 700;
   margin: 0;
-  text-transform: uppercase;
-  color: var(--color1);
-  letter-spacing: 5px;
+  line-height: 1.5;
 }
 
 h2 {
-  font-size: clamp(40px, 4vw, 80px);
-  font-weight: 800;
-  line-height: 1.1;
+  font-size: clamp(24px, 3.5vw, 60px);
+  font-weight: 700;
   margin: 0;
-  text-transform: uppercase;
-  color: var(--color1);
+  line-height: 1.2;
 }
 
 h3 {
-  font-size: clamp(30px, 3vw, 60px);
-  font-weight: 800;
-  line-height: 1.1;
+  font-size: clamp(18px, 2.5vw, 30px);
+  font-weight: 700;
   margin: 0;
-  text-transform: uppercase;
-  color: var(--color1);
 }
 
-sub {
-  font-size: 14px;
-  text-transform: uppercase;
-  color: var(--color4);
+span {
+  color: var(--color2);
+  line-height: 1.5;
 }
 
 button {
   display: grid;
   place-items: center;
   width: fit-content;
+  border-radius: 30px;
   min-width: 180px;
   height: 50px;
-  padding: 0 30px;
   border: none;
-  margin: auto;
+  margin: 0;
   cursor: pointer;
   text-transform: uppercase;
-  background: var(--color2);
+  background: var(--color3);
   color: #fff;
   transition: 0.5s;
-}
-
-button:hover {
-  background: rgba(75, 189, 209, 0.8);
-}
-
-button a {
-  color: #fff;
-}
-
-button:hover a {
-  color: #fff;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  background: transparent;
 }
 
 .input-group {
@@ -154,14 +147,12 @@ form {
   gap: 20px;
 }
 
-form > *:first-child {
-  margin-bottom: 20px;
+form *:not(button) {
+  font-size: clamp(16px, 1vw, 20px);
 }
 
 input,
 textarea {
-  padding-block: 10px;
-  margin-bottom: clamp(10px, 1vw, 20px);
   width: 100%;
   border: none;
   border-bottom: 1px solid #ccc;
@@ -175,70 +166,70 @@ textarea {
   background: transparent;
 }
 
-input::placeholder {
-  font-size: 12px;
+*::placeholder {
   text-transform: uppercase;
   opacity: 0.8;
 }
 
-textarea::placeholder {
-  font-size: 14px;
-  text-transform: uppercase;
-  opacity: 0.8;
-}
-
-main {
+.grid-default {
   position: relative;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: clamp(30px, 6vw, 60px);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: clamp(30px, 10vw, 50px);
 }
 
-main > div {
+.grid-default > div {
   position: relative;
   width: 100%;
   height: 100%;
 }
 
-@media screen and (max-width: 1600px) {
-  body {
-    font-size: 16px;
-  }
+.grid-image {
+  display: grid;
+  place-items: center;
 }
 
-@media screen and (max-width: 992px) {
-  #AppClient {
-    gap: 50px;
-  }
+.grid-image img {
+  max-width: 70%;
+  min-width: 250px;
+  object-fit: contain;
+}
 
+.grid-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.no-image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  overflow: hidden;
+  background: var(--color);
+  box-shadow: var(--box-shadow1);
+}
+
+@media screen and (max-width: 1200px) {
   header {
     position: fixed;
-    top: 0;
-    height: fit-content;
-  }
-
-  body {
-    overflow-x: hidden;
+    width: 100%;
   }
 
   main {
-    width: 100%;
-    padding: 0 20px;
-    min-width: auto;
+    gap: 0;
   }
 
   section {
-    min-width: 100%;
+    height: auto;
+    padding: 50px 20px !important;
   }
 
-  main {
-    gap: 30px;
+  .container {
+    min-width: auto;
+    width: 100%;
   }
 }
 
-@media screen and (max-width: 440px) {
-  main {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr) !important;
-  }
+@media screen and (max-width: 480px) {
 }
