--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,11 +1,15 @@
 :root {
-  --bg-color: #fff;
-  --bg-color2: #000;
-  --bg-btn: #000;
-  --font-color: #000;
-  --font-color2: #fff;
+  --color: #0e0c2c;
+  --color1: #110e17;
+  --color2: #9e9e9e;
+  --color3: #5844b4;
+  --color4: #111036;
   --gap-text: clamp(20px, 5vw, 50px);
   --gap-content: clamp(50px, 100%, 100px);
+  --linear1: linear-gradient(to right, #13103b 0%, #0c0b25 30%, #0c0b25 70%, #13103b 100%);
+  --linear2: linear-gradient(to right, #5844b4 0%, #714feb 100%);
+  --linear3: linear-gradient(to bottom, #2e2b44 0%, #111036 100%);
+  --box-shadow1: #4c33a5 6px 6px 15px;
 }
 
 #AppClient {
@@ -23,33 +27,12 @@
   box-sizing: border-box;
 }
 
-header {
-  background: #000;
-  height: 100px;
-}
-
-header a {
-  color: #fff;
-}
-
-footer {
-  position: absolute;
-  bottom: 0;
-  display: grid;
-  place-items: center;
-  background: var(--bg-color2);
-  width: 100%;
-  min-height: 60px;
-  z-index: 1;
-  color: #fff;
-}
-
 body {
   margin: 0;
   padding: 0;
   font-size: clamp(14px, 1vw, 20px);
-  background: var(--bg-color);
-  color: var(--font-color);
+  color: #fff;
+  font-weight: 400;
   font-family: "Inter", sans-serif;
 }
 
@@ -77,9 +60,25 @@ section {
   place-content: center;
   place-items: center;
   min-width: 900px;
-  width: 70vw;
+  width: 60vw;
   margin: auto;
   height: 100%;
+}
+
+header {
+  background: var(--linear1);
+  z-index: 1;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  display: grid;
+  place-items: center;
+  background: var(--linear1);
+  width: 100%;
+  min-height: 60px;
+  z-index: 1;
 }
 
 a {
@@ -88,9 +87,11 @@ a {
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 1px;
+  color: #fff;
 }
 
 a:hover {
+  color: #fff;
 }
 
 img {
@@ -100,16 +101,17 @@ img {
 }
 
 h1 {
-  font-size: clamp(30px, 4.5vw, 60px);
-  font-weight: 800;
+  font-size: clamp(24px, 4.5vw, 80px);
+  font-weight: 700;
   margin: 0;
-  text-transform: uppercase;
+  line-height: 1.5;
 }
 
 h2 {
   font-size: clamp(24px, 3.5vw, 60px);
   font-weight: 700;
   margin: 0;
+  line-height: 1.2;
 }
 
 h3 {
@@ -118,17 +120,24 @@ h3 {
   margin: 0;
 }
 
+span {
+  color: var(--color2);
+  line-height: 1.5;
+}
+
 button {
   display: grid;
   place-items: center;
   width: fit-content;
-  min-width: 160px;
   border-radius: 30px;
-  padding: 15px;
-  margin: 0;
+  min-width: 180px;
+  height: 50px;
   border: none;
-  background: var(--bg-color2);
-  color: var(--font-color2);
+  margin: 0;
+  cursor: pointer;
+  text-transform: uppercase;
+  background: var(--color3);
+  color: #fff;
   transition: 0.5s;
 }
 
@@ -158,7 +167,6 @@ textarea {
 }
 
 *::placeholder {
-  color: var(--font-color);
   text-transform: uppercase;
   opacity: 0.8;
 }
@@ -167,7 +175,7 @@ textarea {
   position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: clamp(30px, 15vw, 100px);
+  gap: clamp(30px, 10vw, 50px);
 }
 
 .grid-default > div {
@@ -182,8 +190,8 @@ textarea {
 }
 
 .grid-image img {
-  width: 100%;
-  height: 100%;
+  max-width: 70%;
+  min-width: 250px;
   object-fit: contain;
 }
 
