--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,11 +1,14 @@
 :root {
   --bg-color: #fff;
-  --bg-color2: #000;
-  --bg-btn: #000;
-  --font-color: #000;
+  --bg-color2: #2b2b2b;
+  --bg-color3: #3a3e4a;
+  --bg-btn: #3a3e4a;
+  --font-color: #3a3e4a;
   --font-color2: #fff;
   --gap-text: clamp(20px, 5vw, 50px);
   --gap-content: clamp(50px, 100%, 100px);
+  --color: #feb68e;
+  --bg-color20: #eeeff3;
 }
 
 #AppClient {
@@ -13,6 +16,14 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+.container {
+  min-width: 900px;
+  width: 70vw;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -54,27 +65,40 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  gap: var(--gap-content);
   overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
   height: 100%;
 }
 
-section {
-  position: relative;
-  display: grid;
-  align-items: center;
-  scroll-snap-align: center;
-  margin-bottom: var(--gap-content);
+main > section:not(:first-child) {
+  padding: 10vw 0;
 }
 
-.container {
-  min-width: 900px;
-  width: 70vw;
-  margin-left: auto;
-  margin-right: auto;
-  height: 100%;
+section {
+  position: relative;
+}
+
+article {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+figure {
+  display: grid;
+  gap: 15px;
+  padding: 20px;
+  margin: 0;
+  border-radius: 10px;
+  box-shadow: 0 0 3px 0 #ccc;
+  overflow: hidden;
+  background: #ffff;
+}
+
+figcaption {
+  font-size: 20px;
+  font-weight: 600;
 }
 
 a {
@@ -85,9 +109,6 @@ a {
   letter-spacing: 1px;
 }
 
-a:hover {
-}
-
 img {
   width: 100%;
   height: 100%;
@@ -95,20 +116,30 @@ img {
 }
 
 h1 {
-  font-size: clamp(30px, 4.5vw, 60px);
+  font-size: 3em;
   font-weight: 600;
   letter-spacing: 1px;
+  margin-block-start: 0;
 }
 
 h2 {
-  font-size: clamp(24px, 3vw, 30px);
-
-  margin: 0;
+  font-size: 1.5em;
 }
 
 h3 {
-  font-size: clamp(18px, 2vw, 24px);
-  margin: 0;
+  font-size: 1.2em;
+}
+
+caption {
+  text-align: left;
+}
+
+caption :is(h1) {
+  margin-bottom: 1em;
+}
+
+p {
+  margin: 0 0 10px;
 }
 
 span {
@@ -138,7 +169,7 @@ button {
 }
 
 form *:not(button) {
-  font-size: clamp(16px, 1vw, 20px);
+  font-size: 1em;
 }
 
 input,
@@ -168,23 +199,24 @@ textarea {
   width: inherit;
 }
 
-.grid-default :is(h1, h2, h3) {
+.grid-default :is(h1, h2, h3, h4, h5) {
   margin: 0;
 }
 
-.mock-section {
+.no-content {
   display: block;
   background: #f1f1f1;
-  height: 30vw;
+  width: 100%;
+  height: 100%;
   width: inherit;
 }
 
 .no-image {
   display: block;
-  width: 100%;
-  height: auto;
-  overflow: hidden;
   background: #f1f1f1;
+  width: 100%;
+  min-height: 200px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1200px) {
