--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,5 @@
 :root {
+  --main-padding: clamp(15px, 10vw, 150px) clamp(15px, 12vw, 200px);
   --bg-color: #fff;
   --bg-color2: #2b2b2b;
   --bg-color3: #3a3e4a;
@@ -16,14 +17,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-}
-
-.container {
-  min-width: 900px;
-  width: 70vw;
-  margin-left: auto;
-  margin-right: auto;
-  height: 100%;
+  font-family: "Onest", sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -59,7 +53,6 @@ body {
   font-size: clamp(14px, 1vw, 18px);
   background: var(--bg-color);
   color: var(--font-color);
-  font-family: "Onest", sans-serif;
 }
 
 main {
@@ -148,6 +141,11 @@ span {
   letter-spacing: 1px;
 }
 
+sup {
+  color: var(--bg-color3);
+  font-weight: 600;
+}
+
 button {
   display: grid;
   place-items: center;
@@ -162,14 +160,16 @@ button {
   transition: 0.5s;
 }
 
-.input-group {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+form *:not(button) {
+  font-size: 16px;
 }
 
-form *:not(button) {
-  font-size: 1em;
+fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  padding: 0;
+  margin: 0;
 }
 
 input,
@@ -179,6 +179,8 @@ textarea {
   border-bottom: 1px solid #ccc;
   background: transparent;
   outline: none;
+  padding: 0;
+  margin: 0;
 }
 
 textarea {
@@ -188,9 +190,8 @@ textarea {
 }
 
 *::placeholder {
-  color: var(--font-color);
-  text-transform: uppercase;
-  opacity: 0.8;
+  color: #fff;
+  font-family: "Onest", sans-serif;
 }
 
 .grid-default {
@@ -232,11 +233,6 @@ textarea {
   section {
     height: auto;
     padding: 50px 20px !important;
-  }
-
-  .container {
-    min-width: auto;
-    width: 100%;
   }
 }
 
