--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -1,6 +1,6 @@
 .TableLayout {
   display: grid;
-  grid-template-columns: 20% 30% auto;
+  grid-template-columns: 20% 25% auto;
   overflow: hidden;
 }
 
@@ -47,6 +47,7 @@
   display: grid;
   align-items: start;
   justify-content: end;
+  justify-items: end;
   gap: 3px;
 }
 
@@ -96,9 +97,7 @@
   place-items: center;
   width: 30px;
   aspect-ratio: 2/1;
-  /*
   border: 1px solid #444;
-  */
   border-radius: 3px;
 }
 
