--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -1,6 +1,6 @@
 .TableLayout {
   display: grid;
-  grid-template-columns: 20% 25% auto;
+  grid-template-columns: 25% 35% auto;
   overflow: hidden;
 }
 
@@ -80,7 +80,7 @@
 .TableFlob {
   display: flex;
   flex-direction: column;
-  border: 1px solid var(--focus);
+  border: 1px solid #444;
   padding: 20px;
   place-items: center;
   gap: 5px;
@@ -97,7 +97,9 @@
   place-items: center;
   width: 30px;
   aspect-ratio: 2/1;
+  /*
   border: 1px solid #444;
+  */
   border-radius: 3px;
 }
 
@@ -129,4 +131,9 @@
   height: 100%;
   padding: 20px;
   overflow-y: scroll;
+}
+
+.TimelineRound {
+  border-bottom: 1px solid #444;
+  padding-bottom: 20px;
 }
