--- a/src/css/app.css
+++ b/src/css/app.css
@@ -44,7 +44,6 @@
   overflow-y: scroll;
   overflow-x: hidden;
   height: 100%;
-  padding-right: 15px;
 }
 
 .search-box {
@@ -259,25 +258,37 @@ textarea {
   overflow: hidden;
 }
 
-@media screen and (max-width: 1200px) {
-  header {
-    position: fixed;
-    width: 100%;
-  }
-
-  main {
-    gap: 0;
-  }
-
-  section {
-    height: auto;
-    padding: 50px 20px !important;
-  }
-
+@media screen and (min-width: 481px) and (max-width: 1200px) {
   #AppClient {
-    display: none;
+    display: none !important;
   }
 }
 
 @media screen and (max-width: 480px) {
+  #NavAside {
+    display: none !important;
+  }
+
+  .QuicksAside {
+    display: none !important;
+  }
+
+  header {
+    display: none !important;
+  }
+
+  footer {
+    display: none !important;
+  }
+
+  #AppClient > section {
+    display: flex !important;
+    flex-direction: column !important;
+  }
+
+  .display-content,
+  main {
+    height: 100vh;
+    padding: 0 !important;
+  }
 }
